chat mention button + dark mode fixes

--- a/src/scss/block/chat/form.scss
+++ b/src/scss/block/chat/form.scss
@@ -11,7 +11,10 @@
 				position: absolute; z-index: 0; left: 0px; top: 0px; width: 100%; height: 100%;
 				border-radius: 50%; background-color: var(--color-bg-primary); border: 1px solid var(--color-shape-secondary);
 			}
-			.icon { position: relative; z-index: 1; width: 20px; height: 20px; background: url('~img/arrow/chat.svg'); }
+			.icon { position: relative; z-index: 1; width: 20px; height: 20px; }
+			.icon.arrow { background-image: url('~img/arrow/chat.svg'); }
+			.icon.mention { background-image: url('~img/icon/chat/navigation/mention.svg'); }
+
 			.counter { position: absolute; z-index: 2; height: 20px; left: 0px; top: -14px; width: 100%; text-align: center; }
 			.counter {
 				.label {
